--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			border: .20vmin solid red;
 			border-color: red;
 			display: grid;
-			grid-template-rows: repeat(6, 1fr);
-			grid-template-columns: repeat(6, 1fr);
+			grid-template-rows: repeat(10, 1fr);
+			grid-template-columns: repeat(10, 1fr);
 		}
 
 		.snake{
@@ -35,7 +35,7 @@
 
 		.food{
 			background-color: red;
-			border: .25vmin solid black;
+			border: 1vmin solid black;
 		}
 	</style>
 	<script src="index.js" defer type="module"></script>
