--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,
 	initial-scale=1.0">
@@ -19,13 +20,21 @@
 
 		#game-board{
 			background-color: black;
-			width: 75vmin;
-			height: 75vmin;
+			width: 50vmin;
+			height: 50vmin;
 			border: .20vmin solid red;
 			border-color: red;
 			display: grid;
 			grid-template-rows: repeat(10, 1fr);
 			grid-template-columns: repeat(10, 1fr);
+		}
+		
+		#chart{
+			background-color: black;
+			width: 20vim;
+			height: 20vim;
+			border: .20vmin solid red;
+			border-color: red;
 		}
 
 		.snake{
@@ -43,5 +52,8 @@
 
 <body>
 	<div id="game-board"></div>
+	<div id="chart"></div>
 </body>
+<script>
+</script>	
 </html>
