--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 			background-color: black;
 			width: 20vim;
 			height: 20vim;
+			position: absolute;
+			top: 8px;
+			right: 16px;
 			border: .20vmin solid red;
 			border-color: red;
 		}
