--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		
 		#chart{
 			background-color: black;
-			width: 20vim;
-			height: 20vim;
+			width: 40vmin;
+			height: 40vmin;
 			position: absolute;
 			top: 8px;
 			right: 16px;
