--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 	<div id="chart"></div>
 	<button class="btn" id="manual_btn">Play</button>
 	<button class="btn" id="automation_btn">Watch snakes learn</button>
+	<button class="btn" id="return_btn">Stop Watching</button>
 </body>
 <script>
 </script>	
