--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
 <body>
 
-	<div id="chart"></div>
+	<div id="chart" style="display:none;"></div>
 	<div class="center">
-		<h1 id="score" style="color:white;">Score: </h1>
-		<h1 id="time" style="color:white;">Time left in this generation: </h1>
-		<div id="game-board" class="center"></div>
+		<h1 id="score" style="color:white; display:none">Score: </h1>
+		<h1 id="time" style="color:white; display:none">Time left in this generation: </h1>
+		<div id="game-board" style="display:none;" class="center"></div>
 		<div class="center">
-			</br><button class="btn" id="return_btn">Back to menu</button>
+			</br><button class="btn" style="display:none;" id="return_btn">Back to menu</button>
 		</div>
 	</div>
 	<div class="center">
